--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!-- the entire body must be written by student -->
+	<div>
+		<p>My current favourite song is bachpan_ka_pyar</p>
+		<a href="https://youtu.be/k7QniTYNsmQ">bachpan_ka_pyar</a>
+	</div>
+    <script type="text/javascript" src="./script.js">
     <script type="text/javascript" src="./script.js">
 </script>
 
